# clash-switcher

./: .gitignore  Cargo.toml  LICENSE  README.md
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  client.rs  lib.rs  main.rs  models.rs  utils.rs
src/commands/: current.rs  mod.rs  mode.rs  proxies.rs  proxy.rs  switch.rs  version.rs
