[package]
name = "clash-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode-width = "0.1"
colored = "2.1"
